--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "todo-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "firebase": "^9.9.3",
-    "firebase-admin": "^11.0.1"
-  }
+    "firebase-admin": "^11.0.1",
+    "firebase-functions": "^3.22.0",
+    "nodemon": "^2.0.19"
+  },
+  "description": ""
 }
