--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase": "^9.9.3",
     "firebase-admin": "^11.0.1",
     "firebase-functions": "^3.22.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "react": "^18.2.0"
   },
   "description": ""
 }
